added more routes to the organizations module
